@@ -1,44 +1,33 @@
 package fi.vm.sade.koodisto.service.business.impl;
 
-import fi.vm.sade.koodisto.dao.KoodiDAO;
-import fi.vm.sade.koodisto.dao.KoodistoDAO;
-import fi.vm.sade.koodisto.dao.KoodistoRyhmaDAO;
-import fi.vm.sade.koodisto.model.KoodistoRyhmaMetadata;
+import fi.vm.sade.koodisto.dto.KoodistoRyhmaMetadataDto;
+import fi.vm.sade.koodisto.repository.KoodiRepository;
+import fi.vm.sade.koodisto.repository.KoodistoRepository;
+import fi.vm.sade.koodisto.repository.KoodistoRyhmaRepository;
 import fi.vm.sade.koodisto.service.business.UriTransliterator;
 import fi.vm.sade.koodisto.service.business.exception.MetadataEmptyException;
 import fi.vm.sade.koodisto.service.types.common.KieliType;
 import fi.vm.sade.koodisto.service.types.common.KoodistoMetadataType;
 import fi.vm.sade.koodisto.util.KoodistoHelper;
-import org.apache.commons.lang.StringUtils;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.context.annotation.Lazy;
 import org.springframework.stereotype.Component;
 
 import java.util.Collection;
 import java.util.HashMap;
 import java.util.Map;
 
-/**
- * User: kwuoti Date: 21.3.2013 Time: 15.20
- */
 @Component
 public class UriTransliteratorImpl implements UriTransliterator {
 
-    @Autowired
-    private KoodiDAO koodiDAO;
-
-    @Autowired
-    private KoodistoDAO koodistoDAO;
-
-    @Autowired
-    private KoodistoRyhmaDAO koodistoRyhmaDAO;
-
-    private static final Map<String, String> TRANSLITERATION = new HashMap<String, String>();
+    private static final Map<String, String> TRANSLITERATION = new HashMap<>();
+    private static final KieliType[] PREFERRED_ORDER = {KieliType.FI, KieliType.SV, KieliType.EN};
 
     static {
-        String[][] specialCharacters = new String[][] { { "å", "o" }, { "ä", "a" }, { "ö", "o" } };
+        String[][] specialCharacters = new String[][]{{"å", "o"}, {"ä", "a"}, {"ö", "o"}};
 
-        String[] allowedCharacters = new String[] { "a", "b", "c", "d", "e", "f", "g", "h", "i", "j", "k", "l", "m", "n", "o", "p", "q", "r", "s", "t",
-                "u", "v", "w", "x", "y", "z", "0", "1", "2", "3", "4", "5", "6", "7", "8", "9" };
+        String[] allowedCharacters = new String[]{"a", "b", "c", "d", "e", "f", "g", "h", "i", "j", "k", "l", "m", "n", "o", "p", "q", "r", "s", "t",
+                "u", "v", "w", "x", "y", "z", "0", "1", "2", "3", "4", "5", "6", "7", "8", "9"};
 
         for (String c : allowedCharacters) {
             TRANSLITERATION.put(c, c);
@@ -49,14 +38,20 @@ public class UriTransliteratorImpl implements UriTransliterator {
         }
     }
 
-    private static final KieliType[] PREFERRED_ORDER = { KieliType.FI, KieliType.SV, KieliType.EN };
+    @Autowired
+    @Lazy
+    private KoodiRepository koodiRepository;
+    @Autowired
+    private KoodistoRepository koodistoRepository;
+    @Autowired
+    private KoodistoRyhmaRepository koodistoRyhmaRepository;
 
     private static String transliterate(String value) {
         StringBuilder b = new StringBuilder();
 
         value = value.toLowerCase();
         for (int i = 0; i < value.length(); ++i) {
-            String c = value.substring(i, i+1);
+            String c = value.substring(i, i + 1);
 
             if (TRANSLITERATION.containsKey(c)) {
                 b.append(TRANSLITERATION.get(c));
@@ -64,6 +59,18 @@ public class UriTransliteratorImpl implements UriTransliterator {
         }
 
         return b.toString();
+    }
+
+    private static KoodistoRyhmaMetadataDto getKoodistoRyhmaMetadataForLanguage(Collection<KoodistoRyhmaMetadataDto> metadatas, KieliType kieli) {
+        KoodistoRyhmaMetadataDto found = null;
+
+        for (KoodistoRyhmaMetadataDto m : metadatas) {
+            if (kieli.value().equals(m.getKieli().name())) {
+                found = m;
+                break;
+            }
+        }
+        return found;
     }
 
     @Override
@@ -82,14 +89,14 @@ public class UriTransliteratorImpl implements UriTransliterator {
         }
 
         String baseKoodistoUri = transliterate(meta.getNimi());
-        if (StringUtils.isBlank(baseKoodistoUri)) {
+        if (baseKoodistoUri.isBlank()) {
             baseKoodistoUri = "-";
         }
 
         String koodistoUri = baseKoodistoUri;
 
         int i = 1;
-        while (koodistoDAO.koodistoUriExists(koodistoUri)) {
+        while (koodistoRepository.existsByKoodistoUri(koodistoUri)) {
             koodistoUri = baseKoodistoUri + "-" + i;
             ++i;
         }
@@ -97,25 +104,13 @@ public class UriTransliteratorImpl implements UriTransliterator {
         return koodistoUri;
     }
 
-    private static KoodistoRyhmaMetadata getKoodistoRyhmaMetadataForLanguage(Collection<KoodistoRyhmaMetadata> metadatas, KieliType kieli) {
-        KoodistoRyhmaMetadata found = null;
-
-        for (KoodistoRyhmaMetadata m : metadatas) {
-            if (kieli.value().equals(m.getKieli().name())) {
-                found = m;
-                break;
-            }
-        }
-        return found;
-    }
-
     @Override
-    public String generateKoodistoGroupUriByMetadata(Collection<KoodistoRyhmaMetadata> metadatas) {
+    public String generateKoodistoGroupUriByMetadata(Collection<KoodistoRyhmaMetadataDto> metadatas) {
 
-        KoodistoRyhmaMetadata meta = null;
+        KoodistoRyhmaMetadataDto meta = null;
         for (KieliType k : PREFERRED_ORDER) {
             meta = getKoodistoRyhmaMetadataForLanguage(metadatas, k);
-            if (meta != null && StringUtils.isNotBlank(meta.getNimi())) {
+            if (meta != null && !meta.getNimi().isBlank()) {
                 break;
             }
         }
@@ -125,16 +120,13 @@ public class UriTransliteratorImpl implements UriTransliterator {
         }
 
         String baseKoodistoRyhmaUri = transliterate(meta.getNimi());
-        if (StringUtils.isBlank(baseKoodistoRyhmaUri)) {
+        if (baseKoodistoRyhmaUri.isBlank()) {
             baseKoodistoRyhmaUri = "-";
-        }
-        if (!StringUtils.containsIgnoreCase(baseKoodistoRyhmaUri, "http://")) {
-            baseKoodistoRyhmaUri = "http://" + baseKoodistoRyhmaUri;
         }
         String koodistoRyhmaUri = baseKoodistoRyhmaUri;
 
         int i = 1;
-        while (koodistoRyhmaDAO.koodistoRyhmaUriExists(koodistoRyhmaUri)) {
+        while (koodistoRyhmaRepository.existsByKoodistoRyhmaUri(koodistoRyhmaUri)) {
             koodistoRyhmaUri = baseKoodistoRyhmaUri + "-" + i;
             ++i;
         }
@@ -143,11 +135,10 @@ public class UriTransliteratorImpl implements UriTransliterator {
     }
 
 
-
     @Override
     public String generateKoodiUriByKoodistoUriAndKoodiArvo(String koodistoUri, String koodiArvo) {
         String arvoTransliterated = transliterate(koodiArvo);
-        if (StringUtils.isBlank(arvoTransliterated)) {
+        if (arvoTransliterated.isBlank()) {
             arvoTransliterated = "-";
         }
 
@@ -155,7 +146,7 @@ public class UriTransliteratorImpl implements UriTransliterator {
         String koodiUri = baseKoodiUri;
 
         int i = 1;
-        while (koodiDAO.koodiUriExists(koodiUri)) {
+        while (koodiRepository.existsByKoodiUri(koodiUri)) {
             koodiUri = baseKoodiUri + "-" + i;
             ++i;
         }
