@@ -1,16 +1,15 @@
 package fi.vm.sade.koodisto.service.business.it;
 
-import com.github.springtestdbunit.DbUnitTestExecutionListener;
-import com.github.springtestdbunit.annotation.DatabaseSetup;
-import fi.vm.sade.koodisto.dao.KoodistonSuhdeDAO;
 import fi.vm.sade.koodisto.dto.KoodistoDto;
 import fi.vm.sade.koodisto.dto.KoodistoDto.RelationCodes;
+import fi.vm.sade.koodisto.dto.KoodistoMetadataDto;
 import fi.vm.sade.koodisto.model.*;
+import fi.vm.sade.koodisto.repository.KoodistonSuhdeRepository;
 import fi.vm.sade.koodisto.service.business.KoodiBusinessService;
 import fi.vm.sade.koodisto.service.business.KoodistoBusinessService;
 import fi.vm.sade.koodisto.service.business.exception.*;
 import fi.vm.sade.koodisto.service.business.util.KoodiVersioWithKoodistoItem;
-import fi.vm.sade.koodisto.service.conversion.SadeConversionService;
+import fi.vm.sade.koodisto.service.conversion.impl.koodisto.KoodistoVersioToKoodistoDtoConverter;
 import fi.vm.sade.koodisto.service.it.DataUtils;
 import fi.vm.sade.koodisto.service.types.CreateKoodistoDataType;
 import fi.vm.sade.koodisto.service.types.SearchKoodisCriteriaType;
@@ -21,45 +20,41 @@ import fi.vm.sade.koodisto.util.KoodistoServiceSearchCriteriaBuilder;
 import org.junit.Test;
 import org.junit.runner.RunWith;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.boot.test.autoconfigure.jdbc.AutoConfigureTestDatabase;
+import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.security.test.context.support.WithMockUser;
-import org.springframework.security.test.context.support.WithSecurityContextTestExecutionListener;
-import org.springframework.test.context.ContextConfiguration;
-import org.springframework.test.context.TestExecutionListeners;
-import org.springframework.test.context.junit4.SpringJUnit4ClassRunner;
-import org.springframework.test.context.support.DependencyInjectionTestExecutionListener;
-import org.springframework.test.context.support.DirtiesContextTestExecutionListener;
-import org.springframework.test.context.transaction.TransactionalTestExecutionListener;
+import org.springframework.test.context.jdbc.Sql;
+import org.springframework.test.context.junit4.SpringRunner;
 
 import java.util.*;
 
 import static org.junit.Assert.*;
 
-@ContextConfiguration(locations = "classpath:spring/test-context.xml")
-@TestExecutionListeners({ DependencyInjectionTestExecutionListener.class,
-        DirtiesContextTestExecutionListener.class,
-        TransactionalTestExecutionListener.class,
-        DbUnitTestExecutionListener.class,
-        WithSecurityContextTestExecutionListener.class })
-@RunWith(SpringJUnit4ClassRunner.class)
-@DatabaseSetup("classpath:test-data.xml")
-@WithMockUser("1.2.3.4.5")
+
+@org.springframework.test.context.jdbc.Sql(
+        scripts = "classpath:test-data.sql",
+        executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD
+)
+@org.springframework.test.context.jdbc.Sql(
+        scripts = "classpath:truncate_tables.sql",
+        executionPhase = Sql.ExecutionPhase.AFTER_TEST_METHOD
+)
+@AutoConfigureTestDatabase
+@RunWith(SpringRunner.class)
+@SpringBootTest
+@WithMockUser(value = "1.2.3.4.5", authorities = "APP_KOODISTO_CRUD_1.2.246.562.10.00000000001")
 public class KoodistoBusinessServiceTest {
 
     private static final String CODES_WITH_RELATIONS = "809suhdetahan";
-
+    private static final Long KOODISTON_SUHDE = -6L;
+    @Autowired
+    KoodistoVersioToKoodistoDtoConverter koodistoVersioToKoodistoDtoConverter;
     @Autowired
     private KoodistoBusinessService koodistoBusinessService;
-
     @Autowired
     private KoodiBusinessService koodiBusinessService;
-
     @Autowired
-    private KoodistonSuhdeDAO suhdeDAO;
-    
-    @Autowired
-    private SadeConversionService conversionService;
-
-    private final static Long KOODISTON_SUHDE = -6L;
+    private KoodistonSuhdeRepository suhdeRepository;
 
     @Test
     public void testCreate() {
@@ -85,7 +80,7 @@ public class KoodistoBusinessServiceTest {
 
     @Test
     public void testCreateNewVersion() {
-        String koodistoUri = "http://www.kunnat.fi/kunta";
+        String koodistoUri = "www.kunnat.fi/kunta";
 
         List<KoodistoVersio> currentVersions = listAllKoodistoVersions(koodistoUri);
         assertEquals(1, currentVersions.size());
@@ -98,7 +93,7 @@ public class KoodistoBusinessServiceTest {
     @Test
     public void testListAllVersions() {
 
-        String uri = "http://www.kunnat.fi/kunta";
+        String uri = "www.kunnat.fi/kunta";
 
         List<KoodistoVersio> koodistos = listAllKoodistoVersions(uri);
         assertEquals(1, koodistos.size());
@@ -106,10 +101,10 @@ public class KoodistoBusinessServiceTest {
 
     private KoodistoVersio createKoodisto(String omistaja, String organisaatioOid, Date voimassaAlkuPvm, Date voimassaLoppuPvm, String nimi) {
         List<KoodistoRyhma> ryhmas = koodistoBusinessService.listAllKoodistoRyhmas();
-        List<String> ryhmaUris = new ArrayList<String>();
+        List<String> ryhmaUris = new ArrayList<>();
         ryhmaUris.add(ryhmas.get(0).getKoodistoRyhmaUri());
 
-        CreateKoodistoDataType createKoodistoDataType = fi.vm.sade.koodisto.service.it.DataUtils.createCreateKoodistoDataType(
+        CreateKoodistoDataType createKoodistoDataType = DataUtils.createCreateKoodistoDataType(
                 omistaja, organisaatioOid, voimassaAlkuPvm, voimassaLoppuPvm, nimi);
         KoodistoVersio koodisto = koodistoBusinessService.createKoodisto(ryhmaUris, createKoodistoDataType);
         return koodisto;
@@ -117,7 +112,7 @@ public class KoodistoBusinessServiceTest {
 
     @Test(expected = KoodiVersioHasRelationsException.class)
     public void testDeleteVersioWithKoodiVersioHasRelationsException() {
-        final String koodistoUri = "http://testikoodisto.fi";
+        final String koodistoUri = "testikoodisto.fi";
         final Integer koodistoVersio = 2;
 
         final int numberOfVersiosBeforeDelete = 2;
@@ -137,7 +132,7 @@ public class KoodistoBusinessServiceTest {
     @Test
     public void testDeleteKoodisto() {
 
-        final String koodistoUri = "http://koodisto20";
+        final String koodistoUri = "koodisto20";
         final Integer koodistoVersio = 1;
 
         assertTrue(koodistoBusinessService.koodistoExists(koodistoUri));
@@ -161,35 +156,35 @@ public class KoodistoBusinessServiceTest {
 
     @Test(expected = KoodistonSuhdeContainsKoodinSuhdeException.class)
     public void existingCodeElementRelationsPreventDeletingKoodisto() {
-        koodistoBusinessService.removeRelation("koodisiirtyykoodisto", Arrays.asList("http://koodisto18"), SuhteenTyyppi.SISALTYY);
+        koodistoBusinessService.removeRelation("koodisiirtyykoodisto", Arrays.asList("koodisto18"), SuhteenTyyppi.SISALTYY);
     }
 
     @Test
     public void removeRelation() {
-        assertNotNull(suhdeDAO.read(KOODISTON_SUHDE));
+        assertNotNull(suhdeRepository.findById(KOODISTON_SUHDE));
         koodistoBusinessService.removeRelation("suhde502kanssa", Arrays.asList("suhde501kanssa"), SuhteenTyyppi.SISALTYY);
-        assertNull(suhdeDAO.read(KOODISTON_SUHDE));
+        assertNull(suhdeRepository.findById(KOODISTON_SUHDE).orElse(null));
     }
 
     @Test
     public void addsRelation() {
-        koodistoBusinessService.addRelation("http://koodisto20", "http://koodisto21", SuhteenTyyppi.RINNASTEINEN);
-        assertTrue(koodistoBusinessService.hasAnyRelation("http://koodisto20", "http://koodisto21"));
+        koodistoBusinessService.addRelation("koodisto20", "koodisto21", SuhteenTyyppi.RINNASTEINEN);
+        assertTrue(koodistoBusinessService.hasAnyRelation("koodisto20", "koodisto21"));
     }
 
     @Test
     public void preventsAddingSameRelationMoreThanOnce() {
         KoodistoVersio latest = koodistoBusinessService.getLatestKoodistoVersio("suhde502kanssa");
         koodistoBusinessService.addRelation("suhde502kanssa", "suhde501kanssa", SuhteenTyyppi.SISALTYY);
-        assertEquals(1, suhdeDAO.findBy("ylakoodistoVersio", latest).size());
+        assertEquals(1, suhdeRepository.countByYlakoodistoVersio(latest));
     }
 
     @Test
     public void preventsAddingSameRelationMoreThanOnceDespiteRelationType() {
         KoodistoVersio latest = koodistoBusinessService.getLatestKoodistoVersio("suhde502kanssa");
         koodistoBusinessService.addRelation("suhde502kanssa", "suhde501kanssa", SuhteenTyyppi.RINNASTEINEN);
-        assertEquals(1, suhdeDAO.findBy("ylakoodistoVersio", latest).size());
-        assertTrue(suhdeDAO.findBy("alakoodistoVersio", latest).isEmpty());
+        assertEquals(1, suhdeRepository.countByYlakoodistoVersio(latest));
+        assertEquals(0, suhdeRepository.countByAlakoodistoVersio(latest));
     }
 
     @Test(expected = KoodistoRelationToSelfException.class)
@@ -209,50 +204,52 @@ public class KoodistoBusinessServiceTest {
     public void willFetchRelationsForOlderVersions() {
         assertEquals(2, koodistoBusinessService.getKoodistoVersio("vaintuoreimmatrelaatiot", 1).getAlakoodistos().size());
     }
-	@Test
+
+    @Test
     public void doesNotSetStartDateToNewDateWhenUpdatingKoodistoVersioThatIsInLuonnosTila() {
-        KoodistoVersio kv = koodistoBusinessService.getLatestKoodistoVersio("http://koodisto15");
+        KoodistoVersio kv = koodistoBusinessService.getLatestKoodistoVersio("koodisto15");
         Date startDate = kv.getVoimassaAlkuPvm();
         UpdateKoodistoDataType type = DataUtils.createUpdateKoodistoDataType(kv.getKoodisto().getKoodistoUri(), kv.getKoodisto().getOmistaja(), TilaType.LUONNOS,
-                kv.getKoodisto().getOrganisaatioOid(), startDate, kv.getVoimassaLoppuPvm(), "NewName", kv.getVersio(), kv.getVersion());        
+                kv.getKoodisto().getOrganisaatioOid(), startDate, kv.getVoimassaLoppuPvm(), "NewName", kv.getVersio(), kv.getVersion());
         koodistoBusinessService.updateKoodisto(type);
-        assertEquals(startDate, koodistoBusinessService.getLatestKoodistoVersio("http://koodisto15").getVoimassaAlkuPvm());
+        assertEquals(startDate, koodistoBusinessService.getLatestKoodistoVersio("koodisto15").getVoimassaAlkuPvm());
     }
 
-	@Test
-	public void testSavingKoodisto() {
-	    String koodistoUri = "koodistonSaveTestiKoodisto0";
-	    int versio = 1;
-	    List<RelationCodes> includesCodes = Arrays.asList(new RelationCodes("koodistonSaveTestiKoodisto1", 1, false, new HashMap<>()));
-	    List<RelationCodes> withinCodes = Arrays.asList(new RelationCodes("koodistonSaveTestiKoodisto2", 1, false, new HashMap<>()));
-	    List<RelationCodes> levelsWithCodes = Arrays.asList(new RelationCodes("koodistonSaveTestiKoodisto3", 1, false, new HashMap<>()));
-	    KoodistoDto codesDTO = createKoodistoDtoForSave(koodistoUri, versio, includesCodes, withinCodes, levelsWithCodes);
+    @Test
+    public void testSavingKoodisto() {
+        String koodistoUri = "koodistonSaveTestiKoodisto0";
+        int versio = 1;
+        List<RelationCodes> includesCodes = List.of(new RelationCodes("koodistonSaveTestiKoodisto1", 1, false, new HashMap<>(), new HashMap<>()));
+        List<RelationCodes> withinCodes = List.of(new RelationCodes("koodistonSaveTestiKoodisto2", 1, false, new HashMap<>(), new HashMap<>()));
+        List<RelationCodes> levelsWithCodes = List.of(new RelationCodes("koodistonSaveTestiKoodisto3", 1, false, new HashMap<>(), new HashMap<>()));
+        KoodistoDto codesDTO = createKoodistoDtoForSave(koodistoUri, versio, includesCodes, withinCodes, levelsWithCodes);
 
-	    KoodistoVersio result = koodistoBusinessService.getLatestKoodistoVersio(koodistoUri);
+        KoodistoVersio result = koodistoBusinessService.getLatestKoodistoVersio(koodistoUri);
 
-	    assertEquals(2, result.getAlakoodistos().size());
-	    assertEquals(2, result.getYlakoodistos().size());
+        assertEquals(2, result.getAlakoodistos().size());
+        assertEquals(2, result.getYlakoodistos().size());
 
         koodistoBusinessService.saveKoodisto(codesDTO);
         result = koodistoBusinessService.getLatestKoodistoVersio(koodistoUri);
 
-	    assertEquals(2, result.getAlakoodistos().size());
-	    assertEquals(1, result.getYlakoodistos().size());
+        assertEquals(2, result.getAlakoodistos().size());
+        assertEquals(1, result.getYlakoodistos().size());
 
-	    assertEquals(codesDTO.getKoodistoUri(), result.getKoodisto().getKoodistoUri());
-	    assertEquals(versio + 1, result.getVersio().intValue());
-	    assertEquals(Tila.LUONNOS, result.getTila());
-	    KoodistoMetadata expectedMeta = codesDTO.getMetadata().get(0);
-	    assertEquals(expectedMeta.getKieli(), result.getMetadatas().iterator().next().getKieli());
-	    assertEquals(expectedMeta.getNimi(), result.getMetadatas().iterator().next().getNimi());
-	    assertEquals(expectedMeta.getKuvaus(), result.getMetadatas().iterator().next().getKuvaus());
-	}
+        assertEquals(codesDTO.getKoodistoUri(), result.getKoodisto().getKoodistoUri());
+        assertEquals(versio + 1, result.getVersio().intValue());
+        assertEquals(Tila.LUONNOS, result.getTila());
+        KoodistoMetadataDto expectedMeta = codesDTO.getMetadata().get(0);
+        assertEquals(expectedMeta.getKieli(), result.getMetadatas().iterator().next().getKieli());
+        assertEquals(expectedMeta.getNimi(), result.getMetadatas().iterator().next().getNimi());
+        assertEquals(expectedMeta.getKuvaus(), result.getMetadatas().iterator().next().getKuvaus());
+    }
 
-	@Test
-	public void savesKoodistoWithoutCopyingPassiveRelations() {
-	    String koodistoUri = "passiivisuhdeeikopioidu";
+
+    @Test
+    public void savesKoodistoWithoutCopyingPassiveRelations() {
+        String koodistoUri = "passiivisuhdeeikopioidu";
         KoodistoVersio result = koodistoBusinessService.getLatestKoodistoVersio(koodistoUri);
-        KoodistoDto dto = conversionService.convert(result, KoodistoDto.class);
+        KoodistoDto dto = koodistoVersioToKoodistoDtoConverter.convert(result);
         assertEquals(1, dto.getWithinCodes().size());
         dto.getMetadata().get(0).setNimi("Uusi");
         koodistoBusinessService.saveKoodisto(dto);
@@ -260,19 +257,19 @@ public class KoodistoBusinessServiceTest {
         assertTrue(result.getYlakoodistos().isEmpty());
     }
 
-    @Test(expected=KoodistoTilaException.class)
+    @Test(expected = KoodistoTilaException.class)
     public void doesNotAllowTilaUpdateFromHyvaksyttyToLuonnos() {
-        KoodistoVersio result = koodistoBusinessService.getLatestKoodistoVersio("http://koodisto12");
-        KoodistoDto dto = conversionService.convert(result, KoodistoDto.class);
+        KoodistoVersio result = koodistoBusinessService.getLatestKoodistoVersio("koodisto12");
+        KoodistoDto dto = koodistoVersioToKoodistoDtoConverter.convert(result);
         dto.setTila(Tila.LUONNOS);
         koodistoBusinessService.saveKoodisto(dto);
     }
 
-	@Test
-	public void setsOldCodesAndCodeElementRelationsToPassiveWhenNewVersionIsCreated() throws Exception {
-	    String koodistoUri = "vanhasuhdepassivoidaan";
-	    koodistoBusinessService.createNewVersion(koodistoUri);
-	    assertRelationsArePassive(koodistoBusinessService.getKoodistoVersio("vanhasuhdepassivoidaan", 2), false);
+    @Test
+    public void setsOldCodesAndCodeElementRelationsToPassiveWhenNewVersionIsCreated() throws Exception {
+        String koodistoUri = "vanhasuhdepassivoidaan";
+        koodistoBusinessService.createNewVersion(koodistoUri);
+        assertRelationsArePassive(koodistoBusinessService.getKoodistoVersio("vanhasuhdepassivoidaan", 2), false);
         SearchKoodisCriteriaType criteriaType = new SearchKoodisCriteriaType();
         criteriaType.setKoodiArvo("tamansuhdepassivoidaan");
         List<KoodiVersioWithKoodistoItem> koodiVersioWithKoodistoItems = koodiBusinessService.searchKoodis(criteriaType);
@@ -284,14 +281,14 @@ public class KoodistoBusinessServiceTest {
         }
     }
 
-	@Test
-	public void setsLowerOldCodesAndCodeElementRelationsToPassiveWhenNewVersionIsCreated() throws Exception {
-	    koodistoBusinessService.createNewVersion(CODES_WITH_RELATIONS);
-	    Set<KoodistonSuhde> relations = koodistoBusinessService.getKoodistoVersio(CODES_WITH_RELATIONS, 1).getYlakoodistos();
-	    assertEquals(2, relations.size());
-	    for (KoodistonSuhde ks : relations) {
-	        assertTrue(ks.isPassive());
-	    }
+    @Test
+    public void setsLowerOldCodesAndCodeElementRelationsToPassiveWhenNewVersionIsCreated() throws Exception {
+        koodistoBusinessService.createNewVersion(CODES_WITH_RELATIONS);
+        Set<KoodistonSuhde> relations = koodistoBusinessService.getKoodistoVersio(CODES_WITH_RELATIONS, 1).getYlakoodistos();
+        assertEquals(2, relations.size());
+        for (KoodistonSuhde ks : relations) {
+            assertTrue(ks.isPassive());
+        }
 
         SearchKoodisCriteriaType criteriaType = new SearchKoodisCriteriaType();
         criteriaType.setKoodiArvo("sisaltyy706ja707");
@@ -299,66 +296,66 @@ public class KoodistoBusinessServiceTest {
         assertEquals(koodiVersioWithKoodistoItems.size(), 1);
         KoodiVersio kv = koodiVersioWithKoodistoItems.get(0).getKoodiVersio();
 
-	    Set<KoodinSuhde> codeRelations = kv.getYlakoodis();
-	    // Passive relations don't follow to the new version (initially 2 relations)
-	    assertEquals(1, codeRelations.size());
-	    for (KoodinSuhde ks : codeRelations) {
+        Set<KoodinSuhde> codeRelations = kv.getYlakoodis();
+        // Passive relations don't follow to the new version (initially 2 relations)
+        assertEquals(1, codeRelations.size());
+        for (KoodinSuhde ks : codeRelations) {
             assertFalse(ks.isPassive());
         }
-	}
+    }
 
     @Test
     public void setsRelationsToPassiveWhenKoodistoIsSetToPassive() throws Exception {
-	    assertRelationsArePassive(givenKoodistoWithRelationsAndTila("vanhasuhdepassivoidaan", TilaType.PASSIIVINEN), false);
+        assertRelationsArePassive(givenKoodistoWithRelationsAndTila("vanhasuhdepassivoidaan", TilaType.PASSIIVINEN), false);
     }
 
-	@Test
-	public void activatesRelationsInPreviousVersion() throws Exception {
-	    koodistoBusinessService.delete("vanhatsuhteetaktivoituupoistossa", 2);
-	    KoodistoVersio latest = koodistoBusinessService.getLatestKoodistoVersio("vanhatsuhteetaktivoituupoistossa");
-	    assertEquals(1, latest.getVersio().intValue());
-	    assertRelationsAreActive(latest);
-	    assertCodeElementRelationsAreActive(koodiBusinessService.getKoodi("wanhasuhdeaktivoituupoistossa").getKoodiVersios().iterator().next());
-	}
+    @Test
+    public void activatesRelationsInPreviousVersion() throws Exception {
+        koodistoBusinessService.delete("vanhatsuhteetaktivoituupoistossa", 2);
+        KoodistoVersio latest = koodistoBusinessService.getLatestKoodistoVersio("vanhatsuhteetaktivoituupoistossa");
+        assertEquals(1, latest.getVersio().intValue());
+        assertRelationsAreActive(latest);
+        assertCodeElementRelationsAreActive(koodiBusinessService.getKoodi("wanhasuhdeaktivoituupoistossa").getKoodiVersios().iterator().next());
+    }
 
-	private void assertCodeElementRelationsAreActive(KoodiVersio koodiVersio) {
-	    assertFalse(koodiVersio.getAlakoodis().isEmpty());
-	    for (KoodinSuhde ks : koodiVersio.getAlakoodis()) {
-	        assertFalse(ks.isPassive());
-	    }
+    private void assertCodeElementRelationsAreActive(KoodiVersio koodiVersio) {
+        assertFalse(koodiVersio.getAlakoodis().isEmpty());
+        for (KoodinSuhde ks : koodiVersio.getAlakoodis()) {
+            assertFalse(ks.isPassive());
+        }
     }
 
     private KoodistoVersio givenKoodistoWithRelationsAndTila(String koodistoUri, TilaType tila) {
-	    UpdateKoodistoDataType dataType = DataUtils.convert(koodistoBusinessService.getLatestKoodistoVersio(koodistoUri));
-	    dataType.setTila(tila);
-	    koodistoBusinessService.updateKoodisto(dataType);
-	    return koodistoBusinessService.getLatestKoodistoVersio(koodistoUri);
-	}
-	
-	private void assertRelationsAreActive(KoodistoVersio kv) {
-	    assertFalse(kv.getAlakoodistos().isEmpty());
-        for(KoodistonSuhde ks : kv.getAlakoodistos()) {
-             assertFalse(ks.isPassive());
-         }
+        UpdateKoodistoDataType dataType = DataUtils.convert(koodistoBusinessService.getLatestKoodistoVersio(koodistoUri));
+        dataType.setTila(tila);
+        koodistoBusinessService.updateKoodisto(dataType);
+        return koodistoBusinessService.getLatestKoodistoVersio(koodistoUri);
+    }
+
+    private void assertRelationsAreActive(KoodistoVersio kv) {
+        assertFalse(kv.getAlakoodistos().isEmpty());
+        for (KoodistonSuhde ks : kv.getAlakoodistos()) {
+            assertFalse(ks.isPassive());
+        }
     }
 
     private void assertRelationsArePassive(KoodistoVersio kv, boolean lowerPassive) {
         assertFalse(kv.getAlakoodistos().isEmpty());
-        for(KoodistonSuhde ks : kv.getAlakoodistos()) {
-             assertRelationIsPassive(lowerPassive, ks);
-         }
+        for (KoodistonSuhde ks : kv.getAlakoodistos()) {
+            assertRelationIsPassive(lowerPassive, ks);
+        }
     }
 
     private void assertRelationIsPassive(boolean lowerPassive, KoodistonSuhde ks) {
         assertTrue(ks.isPassive());
-        assertTrue((!lowerPassive && ks.isYlaKoodistoPassive()) || lowerPassive && ! ks.isYlaKoodistoPassive());
+        assertTrue((!lowerPassive && ks.isYlaKoodistoPassive()) || lowerPassive && !ks.isYlaKoodistoPassive());
         assertTrue((lowerPassive && ks.isAlaKoodistoPassive()) || !lowerPassive && !ks.isAlaKoodistoPassive());
     }
 
     private void assertCodeElementRelationIsPassive(boolean lowerPassive, KoodinSuhde ks) {
         assertTrue(ks.isPassive());
-         assertTrue((!lowerPassive && ks.isYlaKoodiPassive()) || lowerPassive && ! ks.isYlaKoodiPassive());
-         assertTrue((lowerPassive && ks.isAlaKoodiPassive()) || !lowerPassive && !ks.isAlaKoodiPassive());
+        assertTrue((!lowerPassive && ks.isYlaKoodiPassive()) || lowerPassive && !ks.isYlaKoodiPassive());
+        assertTrue((lowerPassive && ks.isAlaKoodiPassive()) || !lowerPassive && !ks.isAlaKoodiPassive());
     }
 
     private KoodistoDto createKoodistoDtoForSave(String koodistoUri, int versio, List<RelationCodes> includesCodes, List<RelationCodes> withinCodes, List<RelationCodes> levelsWithCodes) {
@@ -368,23 +365,21 @@ public class KoodistoBusinessServiceTest {
         d.setVersion(0L);
         d.setKoodistoUri(koodistoUri);
         d.setOrganisaatioOid("1.2.2004.6");
-        
+
         d.setPaivitysPvm(new Date());
         d.setVoimassaAlkuPvm(new Date());
         d.setVoimassaLoppuPvm(new Date());
-        
-        ArrayList<KoodistoMetadata> metadata = new ArrayList<KoodistoMetadata>();
-        KoodistoMetadata md = new KoodistoMetadata();
-        md.setKieli(Kieli.FI);
-        md.setKuvaus("UusiKuvaus");
-        md.setNimi("UusiNimi");
-        metadata.add(md);
-        d.setMetadata(metadata);
-        
+
+        d.setMetadata(List.of(KoodistoMetadataDto.builder()
+                .kieli(Kieli.FI)
+                .nimi("UusiNimi")
+                .kuvaus("UusiKuvaus")
+                .build()));
+
         d.setIncludesCodes(includesCodes);
         d.setLevelsWithCodes(levelsWithCodes);
         d.setWithinCodes(withinCodes);
-        
+
         return d;
     }
 }
